<resources>
    <string name="app_name">Firebase Demo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="welcome_user">Welcome User</string>
    <string name="add">Add</string>
</resources>