<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_user"
        android:textStyle="bold"
        android:textSize="40sp"
        android:layout_marginTop="15dp"
        android:id="@+id/heading"
        android:gravity="center_horizontal"
        />
    <EditText
        android:id="@+id/edit"
        android:layout_below="@id/heading"
        android:layout_marginTop="15dp"
        android:hint="Enter anything"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/add"
        android:text="@string/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:backgroundTint="@color/black"/>
    <Button
        android:id="@+id/logout"
        android:text="@string/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/add"
        />
    <ListView
        android:id="@+id/listview"
        android:layout_below="@id/logout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</RelativeLayout>